--- a/a-propos.html
+++ b/a-propos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,7 +22,7 @@
   <link href="css/perso.css" rel="stylesheet">
 </head>
 <body>
-  <nav class="navbar navbar-inverse" style="border-color:transparent;">
+  <nav class="navbar navbar-default" style="border-color:transparent;">
    <div class="container-fluid">
      <ul class="nav navbar-nav navbar-right">
        <li><a href="index.php"><span class="glyphicon glyphicon-home"></span> Accueil</a></li>
@@ -50,20 +50,21 @@
         <p>Les données proviennt toutes de data.Gouv.fr, que vous pouvez retrouver ici.</p>
 
         <h2 class="title">Nos obligations !</h2>
-      <h4>La base Sirene contenant des données à caractère personnel, l'Insee attire votre attention sur les obligations légales qui en découlent:</h4>
-
-    <p>Le traitement de ces données relève des obligations de déclaration de la Loi 78-17 du 6 janvier 1978 modifiée, dîte Loi CNIL : https://www.cnil.fr/fr/loi-78-17-du-6-janvier-1978-modifiee</p>
-    <p>Selon votre usage du jeu de données, il est de votre responsabilité de tenir compte du statut de diffusion le plus récent de chaque personne physique. En effet, l'article A123-96 du code de commerce dispose que : "Toute personne physique peut demander soit directement lors de ses formalités de création ou de modification, soit par lettre adressée au directeur général de l'Institut national de la statistique et des études économiques, que les informations du répertoire la concernant ne puissent être utilisées par des tiers autres que les organismes habilités au titre de l'article R. 123-224 ou les administrations, à des fins de prospection, notamment commerciale."
-</p>
-  <p>Source : Data.gouv.fr</p>
+      <h4>La base Sirene contenant des données à caractère personnel, l'Insee attire notre attention sur les obligations légales qui en découlent:</h4>
+      <blockquote>
+        <p>Le traitement de ces données relève des obligations de déclaration de la Loi 78-17 du 6 janvier 1978 modifiée, dîte Loi CNIL : https://www.cnil.fr/fr/loi-78-17-du-6-janvier-1978-modifiee</p>
+        <p>Selon votre usage du jeu de données, il est de votre responsabilité de tenir compte du statut de diffusion le plus récent de chaque personne physique. En effet, l'article A123-96 du code de commerce dispose que : "Toute personne physique peut demander soit directement lors de ses formalités de création ou de modification, soit par lettre adressée au directeur général de l'Institut national de la statistique et des études économiques, que les informations du répertoire la concernant ne puissent être utilisées par des tiers autres que les organismes habilités au titre de l'article R. 123-224 ou les administrations, à des fins de prospection, notamment commerciale."
+        </p>
+        <small>Source <cite>Data.gouv.fr</small></cite>
+      </blockquote>
 
         <h2 class="title">Comment sont déterminés les coordonnées GPS ?</h2>
-        <p>La base SIREN ne contient aucune coordonnées GPS, c'est pour cette raison que nous réalisons un rapprochement entre les adresses de la tables SIREN et celles de la table BAN (Base d'Adresses National).
+        <p>La base SIREN ne contient aucune coordonnées GPS, c'est pour cette raison que nous réalisons un rapprochement entre les adresses de la table SIREN et celles de la table BAN (Base d'Adresses National).
         C'est aussi pour cette raison que des sociétés peuvent être absente de notre restitution si l'adresse n'a pu être trouvé.
         </p>
 
         <h2 class="title">Une question, une  remarque ?</h2>
-        <p>N'hésitez pas à nous contacter par email sur contact@datafirm.fr pour nous faire part de questions ou remarques.</p>
+        <p>N'hésitez pas à nous contacter par email sur jerome@it-bouchet.fr pour nous faire part de questions ou remarques.</p>
             </div>
 </body>
 </html>
